--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
   </head>
   <body>
     <h1>bpmn-visualization demo</h1>
-    <div id="bpmn-container"></div>
+    <section>
+        <div style="margin: auto">
+          <div id="bpmn-container" ></div>
+        </div>
+    </section>
     <footer></footer>
   </body>
 </html>
