--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>bpmn-visualization TypeScript demo</title>
+    <title>bpmn-visualization demo template</title>
     <script type="module" src="/src/main.ts"></script>
   </head>
   <body>
-    <h1>bpmn-visualization demo</h1>
+    <h1>bpmn-visualization demo template</h1>
     <div id="bpmn-container"></div>
     <footer></footer>
   </body>
