--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>bpmn-visualization demo template</title>
-    <script type="module" src="/src/main.ts"></script>
+    <script type="module" src="src/main.ts"></script>
   </head>
   <body>
-    <h1>bpmn-visualization demo template</h1>
+    <header>
+      <img src="/logo.svg" id="logo" alt="The Process Analytics project logo" class="logo">
+      <h1>bpmn-visualization demo template</h1>
+    </header>
     <div id="bpmn-container"></div>
     <footer></footer>
   </body>
