--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>bpmn-visualization demo template</title>
-    <script type="module" src="src/main.ts"></script>
+    <script type="module" src="src/index.ts"></script>
   </head>
   <body>
     <header>
