docs: add link to environments
The demo lets navigate to the repository (logo in the header).
The README references surge.sh and GitHub Pages.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <header>
       <img src="/logo.svg" id="logo" alt="The Process Analytics project logo" class="logo">
       <h1>bpmn-visualization demo template</h1>
+      <a href="https://github.com/process-analytics/bpmn-visualization-demo-template/" target="_blank" class="gh-logo"><img src="/github-logo.svg" id="gh-logo" alt="The GitHub logo"></a>
     </header>
     <div id="bpmn-container"></div>
     <footer></footer>
